--- a/index.html
+++ b/index.html
@@ -17,91 +17,7 @@
     <main>
         <div class="Wrapper">
             <div id="calendar" class="calendar">
-                <!-- <div onclick="day(event)" class="day">
-                    1
-                </div>
-                <div onclick="day(event)" class="day">
-                    2
-                </div>
-                <div onclick="day(event)" class="day">
-                    3
-                </div>
-                <div onclick="day(event)" class="day">
-                    4
-                </div>
-                <div onclick="day(event)" class="day">
-                    5
-                </div>
-                <div onclick="day(event)" class="day">
-                    6
-                </div>
-                <div onclick="day(event)" class="day">
-                    7
-                </div>
-                <div onclick="day(event)" class="day">
-                    8
-                </div>
-                <div onclick="day(event)" class="day">
-                    9
-                </div>
-                <div onclick="day(event)" class="day">
-                    10
-                </div>
-                <div class="day">
-                    11
-                </div>
-                <div class="day">
-                    12
-                </div>
-                <div class="day">
-                    13
-                </div>
-                <div class="day">
-                    14
-                </div>
-                <div class="day">
-                    15
-                </div>
-                <div class="day">
-                    16
-                </div>
-                <div class="day">
-                    17
-                </div>
-                <div class="day">
-                    18
-                </div>
-                <div class="day">
-                    19
-                </div>
-                <div class="day">
-                    20
-                </div>
-                <div class="day">
-                    21
-                </div>
-                <div class="day">
-                    22
-                </div>
-                <div class="day">
-                    23
-                </div>
-                <div class="day">
-                    24
-                </div>
-                <div class="day">
-                    25
-                </div>
-                <div class="day">
-                    26
-                </div>
-                <div class="day">
-                    27
-                </div>
-                <div class="day">
-                    28
-                </div> -->
-            </div>
+            </div>   
         <div class="second-part">
             <div class="appointments">
                 <div class="todos">
@@ -123,11 +39,11 @@
                 </div>
             </div>
             <div class="inputs">
-                <input class="appointment-title" type="text" placeholder="appointment title...">
-                <input type="time">
+                <input id="appointment-title" class="appointment-title" type="text" placeholder="appointment title...">
+                <input id="appointment-time" type="time">
 
                 <div class="save-button-input">
-                    <button>Save</button>
+                    <button id="appointment-button" class="button">Save</button>
                 </div>
             </div>
         </div>
