--- a/index.html
+++ b/index.html
@@ -16,25 +16,12 @@
     </header>
     <main>
         <div class="Wrapper">
-            <div id="calendar" class="calendar">
+            <div id="calendar" class="calendar-container">
             </div>   
         <div class="second-part">
             <div class="appointments">
                 <div class="todos">
                     <h3 class="todos-title">Meeting with Paul</h5>
-                    <div class="todos-time">19-30</div>
-
-                </div>
-                <div class="todos">
-                    <h3 class="todos-title">Finish program</h5>
-                    <div class="todos-time">19-30</div>
-                </div>
-                <div class="todos">
-                    <h3 class="todos-title">Check github</h5>
-                    <div class="todos-time">19-30</div>
-                </div>
-                <div class="todos">
-                    <h3 class="todos-title">Call Eric</h5>
                     <div class="todos-time">19-30</div>
                 </div>
             </div>
