--- a/index.html
+++ b/index.html
@@ -20,17 +20,17 @@
             </div>   
         <div class="second-part">
             <div class="appointments">
-                <div class="todos">
-                    <h3 class="todos-title">Meeting with Paul</h5>
-                    <div class="todos-time">19-30</div>
-                </div>
+                <!-- New meetings -->
             </div>
             <div class="inputs">
-                <input id="appointment-title" class="appointment-title" type="text" placeholder="appointment title...">
-                <input id="appointment-time" type="time">
-
+                
+                    <input id="appointment-title" class="appointment-title" type="text" placeholder="appointment title...">
+                    
                 <div class="save-button-input">
-                    <button id="appointment-button" class="button">Save</button>
+                    <input id="appointment-time" type="time">
+                    <button onclick="addMeeting()" id="appointment-button" class="button">Save</button>
+                </div>
+                <div class="footer-second-part">
                 </div>
             </div>
         </div>
