--- a/index.html
+++ b/index.html
@@ -23,9 +23,7 @@
                 <!-- New meetings -->
             </div>
             <div class="inputs">
-                
-                    <input id="appointment-title" class="appointment-title" type="text" placeholder="appointment title...">
-                    
+                    <input id="appointment-title" class="appointment-title" type="text" placeholder="Type appointment title...">
                 <div class="save-button-input">
                     <input id="appointment-time" type="time">
                     <button onclick="addMeeting()" id="appointment-button" class="button">Save</button>
