--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Calendar App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
@@ -19,14 +19,14 @@
     <main>
         <div class="container-fluid">
             <div class="row">
-                <div class="first-part col-md-8">
+                <div class="first-part col-md-8 h-100">
                     <div id="calendar" class="calendar-container">
                         <!-- Calendar -->
                     </div>
                 </div>
                 
                 <!-- second part  -->
-                <div class="second-part col-md-4">
+                <div class="second-part col-md-4 h-100">
                 
                     <!-- appointments section  -->
                     <div class="appointments">
