--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
     <main>
         <div class="container-fluid">
             <div class="row">
-                <div class="first-part col-md-8 h-100">
+                <div class="first-part col-sm-12 col-md-8 h-100">
                     <div id="calendar" class="calendar-container">
                         <!-- Calendar -->
                     </div>
                 </div>
                 
                 <!-- second part  -->
-                <div class="second-part col-md-4 h-100">
+                <div class="second-part col-sm-12 col-md-4 h-100">
                 
                     <!-- appointments section  -->
                     <div class="appointments">
